@@ -1,3 +1,7 @@
+2015-12-21 Franz Holzinger <franz@ttproducts.de>
+	* support for language fallback
+	* bug fix: do not separate entered string by characters if REGEXP is used for the searchWhere function
+
 2015-07-24 Franz Holzinger <franz@ttproducts.de>
 	* tested under TYPO3 7.4.0 alpha
 
